--- a/src/main/resources/templates/bookdatedetails.html
+++ b/src/main/resources/templates/bookdatedetails.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+<div>Poprzednie rezerwacje:</div>
+<table>
+<tr th:each="booking: ${previousbookings}">
+    <td>Nazwisko:</td><td th:text="${booking.name}"></td>
+    <td>Ilość miejsc:</td><td th:text="${booking.personNum}"></td>
+</tr>
+</table>
+
 <div th:text="${bookingmade}"></div>
 <div th:text="${available}"></div>
 <a href="/book">Wróć</a>
