--- a/src/main/resources/templates/checkavailable.html
+++ b/src/main/resources/templates/checkavailable.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{/style.css}"/>
 </head>
 <body>
+
 <div>wybierz datę: </div>
 <form action="/checkdate">
     <select name="year">
