--- a/src/main/resources/templates/bookingdate.html
+++ b/src/main/resources/templates/bookingdate.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/style.css}"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-Rok: <span th:text="${year}"></span>
-Miesiąc: <span th:text="${month}"></span>
-Dzień: <span th:text="${day}"></span><br>
-Nazwisko: <span th:text="${bookname}"></span><br>
-Liczba miejsc: <span th:text="${booknum}"></span>
+<div class="booking-details">
+Data: <span class="available-number" th:text="${day}"></span>.<span class="available-number" th:text="${month}"></span><span class="available-number">.2019</span>
 <br>
-<a th:href="@{|/bookdate/${year}${month}${day}/${bookname}/${booknum}|}">Dodaj</a>
+Godzina: <span class="available-number" th:text="${time}"></span>
+<br>
+Nazwisko: <span class="available-number" th:text="${bookname}"></span>
+<br>
+Liczba miejsc: <span class="available-number" th:text="${booknum}"></span>
+</div>
+<a class="btn btn-primary" th:href="@{|/bookdate/${time}${month}${day}/${bookname}/${booknum}|}">Potwierdź</a>
+
 </body>
 </html>
