--- a/src/main/resources/templates/datedetails.html
+++ b/src/main/resources/templates/datedetails.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/style.css}"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 
-<div>Poprzednie rezerwacje:</div>
-<table>
+<table class="table table-sm" style="width:500px">
+    <thead>
+    <tr>
+        <th>Nazwisko:</th>
+        <th>Ilość miejsc:</th>
+        <th></th>
+    </tr>
+    </thead>
     <tr th:each="booking: ${previousbookings}">
-        <td>Nazwisko: <span th:text="${booking.name}"></span></td>
-        <td>Ilość miejsc: <span th:text="${booking.personNum}"></span></td>
+        <td> <span th:text="${booking.name}"></span></td>
+        <td> <span th:text="${booking.personNum}"></span></td>
         <td><a th:href="@{|/booking/${booking.name}/${booking.personNum}/${booking.date}/delete|}">
             Usuń
         </a></td>
     </tr>
 </table>
 
-Wolne miejsca: <span th:text="${available}"></span>
+Wolne miejsca: <span class="available-number" th:text="${available}"></span>
+<div class="tracks">
+    <div><span class="track-label">Tor 1:</span> <span th:text="${track1}"></span> / 4</div>
+    <div><span class="track-label">Tor 2:</span> <span th:text="${track2}"></span> / 4</div>
+    <div><span class="track-label">Tor 3:</span> <span th:text="${track3}"></span> / 4</div>
+</div>
+<div class="main-view">
+<a class="btn btn-primary" href="/check">Wróć</a>
 <br>
-<div>Tor 1: <span th:text="${track1}"></span> / 4</div>
-<div>Tor 2: <span th:text="${track2}"></span> / 4</div>
-<div>Tor 3: <span th:text="${track3}"></span> / 4</div>
-
-<br>
-<a href="/check">Wróć</a>
-<br>
-<a href="/">Strona główna</a>
+<a class="btn btn-primary" href="/">Strona główna</a>
+</div>
 </body>
 </html>
