--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,41 @@
 body {
     font-family: Arial;
+    padding: 20px;
+}
+
+.main-header {
+    font-size: 28px;
+}
+
+.main-view {
+    line-height: 3.0em;
+}
+
+.tracks {
+    line-height: 18px;
+    padding:10px;
+    width:130px;
+}
+
+.track-label {
+    display: inline-block;
+    width:55px;
+    font-weight: bold;
+}
+
+.available-number {
+    font-weight: bold;
+}
+
+.book-input {
+    width: 40px;
+}
+
+.form-text {
+    line-height: 1.5em;
+}
+
+.booking-details {
+    line-height: 1.5em;
+    padding-bottom: 20px;
 }
