--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/style.css}"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 Szukaj po nazwisku:
 <br>
 <form action="/results">
     <input type="text" name="q" />
-    <input type="submit" value="Szukaj">
+    <input class="btn btn-primary" type="submit" value="Szukaj">
 </form>
+
 </body>
 </html>
