--- a/src/main/resources/templates/bookdatedetails.html
+++ b/src/main/resources/templates/bookdatedetails.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Basen | Dodano rezerwację</title>
     <link rel="stylesheet" th:href="@{/style.css}"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -11,7 +11,7 @@
 <div th:text="${bookingnum}"></div>
 <div th:text="${available}"></div>
 <div class="main-view">
-<a class="btn btn-primary" href="/book">Wróć</a>
+<a class="btn btn-primary" href="/book">Dodaj kolejną rezerwację</a>
 <br>
 <a class="btn btn-primary" href="/">Strona główna</a>
 </div>
