--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -2,17 +2,19 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Basen | Szukaj</title>
     <link rel="stylesheet" th:href="@{/style.css}"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-Szukaj po nazwisku:
-<br>
+<div class="main-header">Znajdź rezerwację po nazwisku</div>
+<div class="nonameprovided" th:if="${noanswer}">Wpisz wyszukiwane nazwisko</div>
 <form action="/results">
     <input type="text" name="q" />
     <input class="btn btn-primary" type="submit" value="Szukaj">
 </form>
-
+<div class="main-view">
+    <a class="btn btn-primary" href="/">Wróć</a>
+</div>
 </body>
 </html>
