--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -39,3 +39,14 @@ body {
     line-height: 1.5em;
     padding-bottom: 20px;
 }
+
+.login-form {
+    margin-top: 30px;
+    width:300px;
+
+}
+
+.nonameprovided {
+    color: red;
+    padding:3px;
+}
