--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Basen | Strona główna</title>
     <link rel="stylesheet" th:href="@{/style.css}"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -10,11 +10,16 @@
 <div class="main-view">
 <div class="main-header">Basen w Bełchatowie</div>
 <div th:text="${deletedbooking}"></div>
-<a class="btn btn-primary" href="/check">Sprawdź termin</a>
-<br>
-<a class="btn btn-primary" href="/book">Dodaj rezerwację</a>
-<br>
-<a class="btn btn-primary" href="/search">Szukaj rezerwacji po nazwisku</a>
+    <div><a class="btn btn-primary" href="/check">Sprawdź termin</a></div>
+
+    <div th:if="${flag}"><a class="btn btn-primary" href="/book">Dodaj rezerwację</a></div>
+
+    <div th:if="${flag}"><a class="btn btn-primary" href="/search">Szukaj rezerwacji po nazwisku</a></div>
+
+    <div th:if="!${flag}"><a class="btn btn-primary" href="/login">Zaloguj</a></div>
+
+    <div th:if="${flag}"><a class="btn btn-primary" href="/logout">Wyloguj</a></div>
 </div>
+
 </body>
 </html>
