--- a/src/main/resources/templates/checkavailable.html
+++ b/src/main/resources/templates/checkavailable.html
@@ -5,56 +5,20 @@
     <title>Basen | Sprawdź termin</title>
     <link rel="stylesheet" th:href="@{/style.css}"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
 <form action="/checkdate"><label>Data: </label>
-    <select name="month">
-        <option name="01">styczeń</option>
-        <option name="02">luty</option>
-        <option name="03">marzec</option>
-        <option name="04">kwiecień</option>
-        <option name="05">maj</option>
-        <option name="06">czerwiec</option>
-        <option name="07">lipiec</option>
-        <option name="08">sierpień</option>
-        <option name="09">wrzesień</option>
-        <option name="10">październik</option>
-        <option name="11">listopad</option>
-        <option name="12">grudzień</option>
-    </select> /
-    <select name="day">
-        <option name="01">01</option>
-        <option name="02">02</option>
-        <option name="03">03</option>
-        <option name="04">04</option>
-        <option name="05">05</option>
-        <option name="06">06</option>
-        <option name="07">07</option>
-        <option name="08">08</option>
-        <option name="09">09</option>
-        <option name="10">10</option>
-        <option name="11">11</option>
-        <option name="12">12</option>
-        <option name="13">13</option>
-        <option name="14">14</option>
-        <option name="15">15</option>
-        <option name="16">16</option>
-        <option name="17">17</option>
-        <option name="18">18</option>
-        <option name="19">19</option>
-        <option name="20">20</option>
-        <option name="21">21</option>
-        <option name="22">22</option>
-        <option name="23">23</option>
-        <option name="24">24</option>
-        <option name="25">25</option>
-        <option name="26">26</option>
-        <option name="27">27</option>
-        <option name="28">28</option>
-        <option name="29">29</option>
-        <option name="30">30</option>
-    </select>
+    <input id="datepicker" width="276" name="fulldate"/>
+    <script>
+        $('#datepicker').datepicker({
+            uiLibrary: 'bootstrap4'
+        });
+    </script>
     <br>
     <label>Godzina: </label>
     <select name="time">
